newsletter page fixing view on mobile + padding

--- a/style.scss
+++ b/style.scss
@@ -7,31 +7,6 @@
   padding: 0;
 }
 
-
-* {
-  box-sizing: border-box;
-  scrollbar-color: transparent transparent;
-  /* thumb and track color */
-  scrollbar-width: 0px;
-}
-
-*::-webkit-scrollbar {
-  width: 0;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background: transparent;
-  border: none;
-}
-
-* {
-  -ms-overflow-style: none;
-}
-
 /* Remove list styles on ul, ol elements with a class attribute */
 ul,
 ol {
@@ -146,7 +121,7 @@ p {
   color: $body-background-color;
   border-radius: 50px;
   font-size: 0.8rem;
-  padding: 2% 3%;
+  padding: 3% 4%;
 }
 
 /*HOMEPAGE*/
@@ -157,12 +132,15 @@ p {
   grid-gap: 15px;
   grid-template-columns: 1fr 5fr 1fr;
 
-
   @media (max-width: $medium) {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    * {
+      margin-bottom: 2%;
+    }
   }
 
   ul {
@@ -174,7 +152,7 @@ p {
 
     li {
       text-align: center;
-      font-size: 0.8rem;
+      font-size: 0.85rem;
     }
 
     .active {
@@ -243,10 +221,18 @@ p {
 
   .first-btn {
     grid-area: d;
+
+    @media (max-width: $medium) {
+      margin-right: 2%;
+    }
   }
 
   .second-btn {
     grid-area: e;
+
+    @media (max-width: $medium) {
+      margin-right: 2%;
+    }
   }
 
   .icon {
@@ -622,6 +608,10 @@ footer {
   @media (max-width: $medium) {
     display: flex;
     flex-direction: column;
+
+    * {
+      margin-bottom: 2%;
+    }
   }
 
   >* {
@@ -630,9 +620,8 @@ footer {
 
   * {
     color: $gray-text;
-    font-size: small; //FIXME review the size. should be always 16?!
+    font-size: small; 
   }
-
 
   h4 {
     font-weight: 600;
@@ -657,7 +646,6 @@ footer {
     text-align: center;
   }
 }
-
 
 /*NEWSLETTER PAGE*/
 .newsletter-header {
@@ -691,7 +679,7 @@ footer {
 
 /*BANNER*/
 .banner-section {
-  margin: 2% auto;
+  margin: 3% auto;
   text-align: center;
 
   @media (min-width: $small) {
@@ -709,22 +697,25 @@ footer {
 
 /*USER GREETING*/
 .user_greeting-section {
-  margin: 2% auto;
+  margin: 3% auto;
   text-align: center;
   color: $gray-color;
 
   //padding bottom  just for the direct children
   >* {
-    padding-bottom: 2%;
+    padding: 2%;
   }
 
   .user-documents {
     background: $background-color;
     margin: 2% auto;
-    padding: 2%;
+    padding: 3%;
     flex-direction: column;
     text-align: left;
     color: $gray-color;
+    >* {
+      padding: 2%;
+    }
 
     @media screen and (max-width: $small) {
       width: 95vw;
@@ -735,7 +726,7 @@ footer {
     }
 
     div {
-      margin: 2% 0;
+      margin: 3% 0;
 
       span {
         color: $purple-color;
@@ -747,7 +738,7 @@ footer {
   button {
     background: $brand-bg-color;
     color: $body-background-color;
-    padding: 1% 3%;
+    padding: 3% 4%;
 
     &:hover {
       background: $purple-color;
